addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
/* ... */
#products_grid_before > h3 {
    height: auto !important;
}

/* Counter graphics */
body {
  counter-reset: section;
  counter-increment: section; /* start counter at 2, the parent website renders the first */
}

#website_sale_donate h3 {
    font-weight: bold;
    font-size: 18px;
    color: black;
    background: transparent;
}

section[name="one-page-checkout"] h3 {
    margin-bottom: 15px !important;
}

section[name="one-page-checkout"] h3,
section[name="one-page-checkout"] h3 > span,
#products_grid_before .small_cart_header,
#products_grid_before .small_cart_header span {
    font-family: 'Merriweather';
    font-weight: bold;
    font-size: 42px;
    background: transparent !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
}

#website_sale_donate h3:before {
    counter-increment: section;
    /* content: counter(section); do not use real counter, due to CSS order, it's counted wrong */
    margin-right: 1rem;
    background-color: #E36F1E;
    color: white;
    display: inline-block;
    text-align: center;
    line-height: 28px;
    border-radius: 14px;
    width: 28px;
    height: 28px;
    font-size: 14px;
}

#wsd-checkout-box h3.amount_title:before { content: "2"; }
#wsd-checkout-box h3.payment_title:before { content: "3"; }
#wsd-checkout-box h3.checkout_title:before { content: "4"; }

/* Suggested price boxes - OPC forms */

.arbitrary_price.form-inline {
    font-size: 0;
}

span.price_donate_suggested_outer {
    display: inline-block;
    margin: 0 !important;
    padding: 0 !important;
    width: 50%;
    background-color: transparent;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input,
.payment_opc_acquirer_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input {
    width: 100%;
    height: 70px;
    border: 1px solid #DEDEDE;
    border-radius: 0;
    background-color: transparent;
    padding-top: 0;
    padding-bottom: 0;
    font-weight: bold;
    font-size: 30px;
}

@media only screen and (max-width: 500px) {
    #wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input,
    .payment_opc_acquirer_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input {
        text-align: right;
    }
}

.price_donate_suggested_currency {
    display: inline-block;
    margin-left: 10px !important;
    margin-top: 22px !important;
    font-size: 14px !important;
    line-height: 25px !important;
    pointer-events: none;
}

.active .price_donate_suggested_currency {
    color: #E36F1E !important;
}

.container #wsd_checkout_form .active .price_donate_suggested_currency::before,
#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div.active > div > span.input-group-addon:last-of-type::before,
.container .payment_opc_acquirer_form .active .price_donate_suggested_currency::before,
.payment_opc_acquirer_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div.active > div > span.input-group-addon:last-of-type::before {
    border: 2px solid #E36F1E;
    content: "\e013";
}

.container #wsd_checkout_form .price_donate_suggested_currency::before,
#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span.input-group-addon:last-of-type::before,
.container .payment_opc_acquirer_form .price_donate_suggested_currency::before,
.payment_opc_acquirer_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span.input-group-addon:last-of-type::before {
    content: "";
    display: inline-block;
    line-height: 20px;
    margin-left: 10px;
    margin-right: 8px;
    width: 24px;
    height: 24px;
    border: 2px solid #DEDEDE;
    border-radius: 12px;
    pointer-events: none;
    vertical-align: top;
    overflow: clip;
    background-position: center;
    font-size: 12px;
    font-family: 'Glyphicons Halflings'
}


#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input:focus,
#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span.active > input,
.payment_opc_acquirer_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input:focus,
.payment_opc_acquirer_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span.active > input {
    width: 100%;
    color: #E36F1E;
    background-color: #FDF7F3;
    border: 1px solid #E36F1E;
    border-radius: 0;
    outline: 0;
}

div.form-group.price_donate {
    border: 1px solid #DEDEDE;
    width: 100%;
}

.price_donate_suggested_outer:nth-child(odd) + div.form-group.price_donate {
    width: 50%;
}

.price_donate_suggested_outer:nth-child(odd) + div.form-group.price_donate > .input-group,
.price_donate_suggested_outer:nth-child(odd) + div.form-group.price_donate > .input-group #price_donate,
.price_donate_suggested_outer:nth-child(odd) + div.form-group.price_donate > .input-group span:last-of-type {
    height: 68px !important;
}

div.form-group.price_donate label {
    display: none;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div,
.payment_opc_acquirer_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div {
    display: flex;
}
/* ... */

